refactor: normalize backend comments and logging
Signed-off-by: zhaoh <yanyan.zh@alibaba-inc.com>